fixed html errors

--- a/contact.html
+++ b/contact.html
@@ -38,22 +38,22 @@
   <div class="container">
     <div class="row">
 
-    <div class="col-md-7" class="col-sm-12" id="content">
+    <div class="col-md-7" id="content">
 
       <div class="panel panel-default">
-          <div class="panel-heading" class="panelhead">
+          <div class="panel-heading">
             <h3 class="panel-title" id="bodyheader">About Me </h3>
           </div> <!-- panel heading end -->
 
         <div class="panel-body">
             <div class="col-md-12">
               <div class="form-group">
-                <label for="exampleInputEmail1">Name</label>
-                  <input type="name" class="form-control" id="inputname" aria-describedby="nameHelp" placeholder="Enter name">
+                <label>Name</label>
+                  <input type="text" class="form-control" id="inputname"  placeholder="Enter text">
               </div>  
               <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="inputemail" aria-describedby="emailHelp" placeholder="Enter email">
+                <label>Email address</label>
+                  <input type="email" class="form-control" id="inputemail" placeholder="Enter email">
               </div>           
               <div class="form-group">
                 <label for="exampleTextarea">Message</label>
@@ -66,14 +66,15 @@
 
     </div> <!-- col 1 end -->
 
-    <div class="col-md-3" class="col-sm-12">
+    <div class="col-md-3">
 
       <div class="panel panel-default" id="connect">
           <div class="panel-heading">
             <h3 class="panel-title" id="connectheader">Connect With Me</h3>
           </div> <!-- panel heading end-->
 
-          <div class="panel-body" class="col-sm-12">
+          <div class="panel-body">
+           <div class="col-sm-12">
             <div class="col-xs-4">
                 <a href="https://github.com/wcrozier12" target="_blank">
                 <img class="socialicons" src="assets/images/github.png" alt="Github">
@@ -89,6 +90,7 @@
                 <img class="socialicons" src="assets/images/stackOverflow.png" alt="StackOverflow">
               </a>
             </div>
+           </div>
           </div> <!-- panel body end-->
       </div> <!-- panel 2 end -->
 
@@ -108,5 +110,4 @@
 <!-- Bootstrap Js -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-  </div>
 </body>
