--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   <div class="container">
   	<div class="row">
 
-  		<div class="col-md-7" class="col-xs-12" id="content">
+  		<div class="col-md-7" id="content">
 
 			<div class="panel panel-default">
-  				<div class="panel-heading" class="panelhead">
+  				<div class="panel-heading">
     				<h3 class="panel-title" id="bodyheader">About Me </h3>
   				</div> <!-- panel heading end -->
 
@@ -55,14 +55,14 @@
 
 		</div> <!-- col 1 end -->
 
- 		<div class="col-md-3" class="col-sm-12">
+ 		<div class="col-md-3">
 
 			<div class="panel panel-default" id="connect">
   				<div class="panel-heading">
    					<h3 class="panel-title" id="connectheader">Connect With Me</h3>
   				</div> <!-- panel heading end-->
 
-  				<div class="panel-body" class="col-sm-12">
+  				<div class="panel-body">
   						<div class="col-xs-4">
     						<a href="https://github.com/wcrozier12" target="_blank">
 								<img class="socialicons" src="assets/images/github.png" alt="Github">
