--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<link rel="icon" type="image/png" href="/Users/WilliamCrozier/Downloads/favicomatic (2)/favicon-16x16.png" sizes="16x16"/>
+		<link rel="icon" type="image/png" href="/Users/WilliamCrozier/Downloads/favicomatic(2)/favicon-16x16.png" sizes="16x16"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	</head>
 <body>
@@ -38,10 +38,10 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-md-7" class="col-sm-12" id="content">
+      <div class="col-md-7" id="content">
 
       <div class="panel panel-default">
-          <div class="panel-heading" class="panelhead">
+          <div class="panel-heading">
             <h3 class="panel-title" id="bodyheader">About Me </h3>
           </div> <!-- panel heading end -->
 
@@ -59,7 +59,7 @@
                 </div>
                </div>
 
-              <div class="col-sm-6" class="projects">
+              <div class="col-sm-6">
                 <div class="projects" style= "background-image:url(http://lorempixel.com/output/food-q-c-640-480-7.jpg)">
                   <h4> Rutgers Info Widget </h4>
                 </div>
@@ -73,14 +73,14 @@
 
     </div> <!-- col 1 end -->
 
-    <div class="col-md-3" class="col-sm-12">
+    <div class="col-md-3">
 
       <div class="panel panel-default" id="connect">
           <div class="panel-heading">
             <h3 class="panel-title" id="connectheader">Connect With Me</h3>
           </div> <!-- panel heading end-->
 
-          <div class="panel-body" class="col-sm-12">
+          <div class="panel-body">
               <div class="col-xs-4">
                 <a href="https://github.com/wcrozier12" target="_blank">
                 <img class="socialicons" src="assets/images/github.png" alt="Github">
